# axum-cargo-registry

./: Cargo.toml  Makefile.toml
axum-cargo-registry/: Cargo.toml  Makefile.toml
axum-cargo-registry/src/: crate_utils.rs  crates.rs  header_util.rs  index.rs  lib.rs
axum-cargo-registry/src/api/: mod.rs  publish.rs
axum-cargo-registry/src/registory_storage/: local.rs  mod.rs  s3.rs
crate-test/: .gitignore  dockercompose.yaml  test.env
crate-test/export-test-lib/: Cargo.toml
crate-test/import-test-crate/: Cargo.toml
crate-test/import-test-crate/.cargo/: config.toml
examples/axum-cargo-registry-s3/: Cargo.toml
examples/axum-cargo-registry-s3/src/: main.rs
examples/local-axum-cargo-registry/: Cargo.toml
examples/local-axum-cargo-registry/src/: main.rs
