[package]
name = "axum-cargo-registry"
version = "0.1.0"
edition = "2021"
rust = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", default-features = false, features = ["json"] }
serde_json = "1.0.106"
aws-config = {version = "1.1.1", optional = true }
aws-sdk-s3 = {version = "1.11.0", optional = true }
tracing = { version = "0.1", features = ["log"] }
thiserror = "1.0.59"
time = { version = "0.3.36", optional = true }
tokio = { version = "1", default-features = false, optional = true }

[features]
default = ["storage-s3", "storage-local", "parse-time"]
storage-s3 = ["dep:aws-config", "dep:aws-sdk-s3"]
storage-local = []
parse-time = ["dep:time", "time/formatting", "time/parsing"] 
run-bin = ["dep:tokio", "tokio/rt", "tokio/macros", "tokio/rt-multi-thread", "axum/tokio", "axum/http1", "axum/http2"]

[[bin]]
name = "local-registry"
required-features = ["run-bin"]
